# toml.lua

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Brewfile  Brewfile.lock.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  toml-0.0.1-1.rockspec  toml-0.0.2-0.rockspec  toml-0.0.3-0.rockspec  toml-0.0.4-0.rockspec  toml-0.1.0-0.rockspec  toml-0.1.1-0.rockspec  toml-0.2.0-0.rockspec  toml-0.3.0-0.rockspec  toml-0.4.0-0.rockspec  toml-0.4.1-0.rockspec  toml-0.4.2-0.rockspec  toml.d.tl
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: buildAndTest-FreeBSD.yml  buildAndTest-Linux.yml  buildAndTest-MacOS.yml  buildAndTest-Windows.yml  buildAndTest.yml  pre-commit.yml
cmake/Modules/: FindLua.cmake
examples/: example.lua
libs/: lua51.lib
scripts/: buildLuaJIT.ps1  buildLuaRocks.sh  compilerName.sh  dll2lib.bat  installLuaRocks.ps1
spec/: decoding_spec.lua  encoding_spec.lua  tables.lua  test.toml
spec/test-data/: massive.toml  test.toml  test2.toml
src/: Options.hpp  kaguya.hpp  toml.cpp  toml.hpp
src/DataTypes/DateAndTime/: dateAndTime.cpp  dateAndTime.hpp
src/DataTypes/TOMLInt/: TOMLInt.cpp  TOMLInt.hpp
src/DateAndTime/: dateAndTime.cpp  dateAndTime.hpp
src/decoding/: decoding.cpp  decoding.hpp
src/encoding/: encoding.cpp  encoding.hpp
src/sol/: config.hpp  sol.hpp
src/utilities/: utilities.cpp  utilities.hpp
tests/: tables.lua  tests.lua
tests/test-data/: invalidTable.toml  massive.toml  multipleDotKeyInvalid.toml  testConfig.json  testConfig.toml  testConfig.yml  testConfig2.toml
tests/test-data/encoding/: noIndentation.json  terseKeys+qoutedTimestamps.toml
